

MIDIboxSEQ V4.078
~~~~~~~~~~~~~~~~~

   o removed MSD (mass storage device) mode to save some memory.
     With the MIOS Filebrowser (integrated into MIOS Studio) this mode has a good
     replacement meanwhile. For direct access to the SD Card another application (like
     MIDIO128) could be temporary uploaded... or the SD Card can be plugged into
     a common SD Card reader.

   o experimental: if Live mode or a MIDI Router based "Track" or "Sel.Trk" is active,
     and Note, CC, PitchBender, Program Change is received on the selected IN Port,
     the corresponding track layer (or LFO CC) will be temporary muted for 1 step.
     This allows to temporary overrule events generated by the sequencer from
     an external MIDI keyboard or controller.

   o it's now possible to control the track mutes via CCs.
     The first CC (for the first track) has to be configured in the MENU->MIDI->Ext.Ctrl
     page. The remaining tracks are controlled from the 15 consecutive CCs.
     E.g. if the CC number is set to 16, the mutes of track 1-16 are controlled with
     CC#16 .. CC#31

   o Trigger/Layer/303 edit view working again


MIDIboxSEQ V4.077
~~~~~~~~~~~~~~~~~

   o it's now possible to send parameter changes, done from the user interface,
     to a specified MIDI output port. This allows to record such changes with a DAW.
     The output port has to be selected in the MIDI->Ext.Ctrl page, where also the
     input port and channel is specified.

   o a very useful "quick save" function has been added which significantly improves
     the song phrases handling.

     The new function will store the current mixer and pattern setup into predefined
     bank positions:
       - Phrase A will use Mixer Map #1 and Patterns 1:A1 2:A1 3:A1 4:A1
       - Phrase B will use Mixer Map #2 and Patterns 1:A2 2:A2 3:A2 4:A2
       - Phrase C will use Mixer Map #3 and Patterns 1:A3 2:A3 3:A3 4:A3
       - ...