@@ -30,15 +30,16 @@
 /////////////////////////////////////////////////////////////////////////////
 
 typedef union {
-  u16 ALL;
+  u32 ALL;
   struct {
-    u16 SYNCHED_PATTERN_CHANGE:1;
-    u16 PASTE_CLR_ALL:1;
-    u16 RATOPC:1;
-    u16 SYNCHED_MUTE:1;
-    u16 SYNCHED_UNMUTE:1;
-    u16 PATTERN_MIXER_MAP_COUPLING:1;
-    u16 INIT_CC:7;
+    u32 SYNCHED_PATTERN_CHANGE:1;
+    u32 PASTE_CLR_ALL:1;
+    u32 RATOPC:1;
+    u32 SYNCHED_MUTE:1;
+    u32 SYNCHED_UNMUTE:1;
+    u32 PATTERN_MIXER_MAP_COUPLING:1;
+    u32 INIT_CC:7;
+    u32 LIVE_LAYER_MUTE_STEPS:3; // 0=off, 1=permanent, 2..4 steps
   };
 } seq_core_options_t;
 
