@@ -15,11 +15,14 @@ MIDIboxSEQ V4.078
      MIDIO128) could be temporary uploaded... or the SD Card can be plugged into
      a common SD Card reader.
 
+   o Options page has been overworked, so that more options can be added in future
+
    o experimental: if Live mode or a MIDI Router based "Track" or "Sel.Trk" is active,
      and Note, CC, PitchBender, Program Change is received on the selected IN Port,
      the corresponding track layer (or LFO CC) will be temporary muted for 1 step.
      This allows to temporary overrule events generated by the sequencer from
      an external MIDI keyboard or controller.
+     This feature has to be configured in the UTILITY->Options page, it's disabled by default!
 
    o it's now possible to control the track mutes via CCs.
      The first CC (for the first track) has to be configured in the MENU->MIDI->Ext.Ctrl
